--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -423,30 +423,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "INF = int(1e9)"
+    "INF = int(1e2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000]\n",
-      "[1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000]\n",
-      "[1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000]\n",
-      "[1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000]\n",
-      "[1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000]\n",
-      "[1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000]\n",
-      "[1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000]\n",
-      "[1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000]\n"
+      "[100, 100, 100, 100, 100, 100, 100, 100]\n",
+      "[100, 100, 100, 100, 100, 100, 100, 100]\n",
+      "[100, 100, 100, 100, 100, 100, 100, 100]\n",
+      "[100, 100, 100, 100, 100, 100, 100, 100]\n",
+      "[100, 100, 100, 100, 100, 100, 100, 100]\n",
+      "[100, 100, 100, 100, 100, 100, 100, 100]\n",
+      "[100, 100, 100, 100, 100, 100, 100, 100]\n",
+      "[100, 100, 100, 100, 100, 100, 100, 100]\n"
      ]
     }
    ],
@@ -454,6 +454,65 @@
     "graph = [[INF] * (m+1) for _ in range(m+1)]\n",
     "for row in graph:\n",
     "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100, 100, 100, 100, 100, 100, 100, 100]\n",
+      "[100, 100, 1, 1, 1, 100, 100, 100]\n",
+      "[100, 1, 100, 100, 1, 100, 100, 100]\n",
+      "[100, 1, 100, 100, 1, 1, 100, 100]\n",
+      "[100, 1, 1, 1, 100, 1, 100, 100]\n",
+      "[100, 100, 100, 1, 1, 100, 100, 100]\n",
+      "[100, 100, 100, 100, 100, 100, 100, 100]\n",
+      "[100, 100, 100, 100, 100, 100, 100, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _ in range(m):\n",
+    "    a, b = map(int, input.readline().rstrip().split())\n",
+    "    graph[a][b] = graph[b][a] = 1\n",
+    "    \n",
+    "for row in graph:\n",
+    "    print(row)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 : [100, 100, 1, 1, 1, 100, 100, 100]\n",
+      "2 : [100, 1, 100, 100, 1, 100, 100, 100]\n",
+      "3 : [100, 1, 100, 100, 1, 1, 100, 100]\n",
+      "4 : [100, 1, 1, 1, 100, 1, 100, 100]\n",
+      "5 : [100, 100, 100, 1, 1, 100, 100, 100]\n",
+      "6 : [100, 100, 100, 100, 100, 100, 100, 100]\n",
+      "7 : [100, 100, 100, 100, 100, 100, 100, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "graph_dict = {}\n",
+    "for i, row in enumerate(graph):\n",
+    "    if i == 0:\n",
+    "        continue\n",
+    "    graph_dict[i] = row\n",
+    "    \n",
+    "for k, v in graph_dict.items():\n",
+    "    print(f\"{k} : {v}\")"
    ]
   }
  ],
