--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -451,14 +451,26 @@
     }
    ],
    "source": [
-    "graph = [[INF] * (m+1) for _ in range(m+1)]\n",
+    "graph = [[INF] * (n+1) for _ in range(n+1)]\n",
     "for row in graph:\n",
     "    print(row)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for a in range(1, n+1):\n",
+    "    for b in range(1, n+1):\n",
+    "        if a == b:\n",
+    "            graph[a][b] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -466,11 +478,11 @@
      "output_type": "stream",
      "text": [
       "[100, 100, 100, 100, 100, 100, 100, 100]\n",
-      "[100, 100, 1, 1, 1, 100, 100, 100]\n",
-      "[100, 1, 100, 100, 1, 100, 100, 100]\n",
-      "[100, 1, 100, 100, 1, 1, 100, 100]\n",
-      "[100, 1, 1, 1, 100, 1, 100, 100]\n",
-      "[100, 100, 100, 1, 1, 100, 100, 100]\n",
+      "[100, 0, 1, 1, 1, 100, 100, 100]\n",
+      "[100, 1, 0, 100, 1, 100, 100, 100]\n",
+      "[100, 1, 100, 0, 1, 1, 100, 100]\n",
+      "[100, 1, 1, 1, 0, 1, 100, 100]\n",
+      "[100, 100, 100, 1, 1, 0, 100, 100]\n",
       "[100, 100, 100, 100, 100, 100, 100, 100]\n",
       "[100, 100, 100, 100, 100, 100, 100, 100]\n"
      ]
