--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -523,10 +523,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"점화식에 따라 Floyd-Warshall algorithm 수행\"\"\"\n",
+    "for k in range(1, n+1):\n",
+    "    for a in range(1, n+1):\n",
+    "        for b in range(1, n+1):\n",
+    "            graph[a][b] = min(graph[a][b], graph[a][k] + graph[k][b])           "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 1 1 2 \n",
+      "1 0 2 1 2 \n",
+      "1 2 0 1 1 \n",
+      "1 1 1 0 1 \n",
+      "2 2 1 1 0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"수행된 결과를 출력\"\"\"\n",
+    "for a in range(1, n+1):\n",
+    "    for b in range(1, n+1):\n",
+    "        if graph[a][b] == 100:\n",
+    "            print(\"INF\", end=\" \")\n",
+    "        else:\n",
+    "            print(graph[a][b], end=\" \")\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
