--- a/dbn_dijkstra_city.ipynb
+++ b/dbn_dijkstra_city.ipynb
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,11 @@
     "start = 1\n",
     "\n",
     "distance = graph[start][k] + graph[k][x]\n",
-    "print(f\"{start}번 노드를 출발해서 {k}번 노드를 경유한 다음 {x}번 노드까지의 최단거리는 : {distance}\")"
+    "\n",
+    "if distance >= 100:\n",
+    "    print(\"-1\")\n",
+    "else:\n",
+    "    print(f\"{start}번 노드를 출발해서 {k}번 노드를 경유한 다음 {x}번 노드까지의 최단거리는 : {distance}\")"
    ]
   },
   {
