dbn_disjoint_set.ipynb

--- a/dbn_disjoint_set.ipynb
+++ b/dbn_disjoint_set.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -49,10 +49,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "부모테이블 : [0, 1, 1, 2, 1, 5, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"부모테이블상에서 부모를 자기자신으로 초기화한다.\"\"\"\n",
+    "parent = [0] * (v + 1)\n",
+    "\n",
+    "for i in range(1, v+1):\n",
+    "    parent[i] = i\n",
+    "    \n",
+    "print(f\"부모테이블 : {parent}\")\n",
+    "    \n",
+    "for i in range(e):\n",
+    "    a, b = map(int, input.readline().rstrip().split())\n",
+    "    union_parent(parent, a, b)\n",
+    "    \n",
+    "print(f\"부모테이블 : {parent}\")"
+   ]
   },
   {
    "cell_type": "code",
