dbn_disjoint_set.ipynb

--- a/dbn_disjoint_set.ipynb
+++ b/dbn_disjoint_set.ipynb
@@ -78,11 +78,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 서로소집합 - 경로압축(Path Compression)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def find_parent_pc(parent, x):\n",
+    "    if parent[x] != x:\n",
+    "        parent[x] = find_parent(parent, parent[x])\n",
+    "    return parent[x]\n",
+    "\n",
+    "def union_parent(parent, a, b):\n",
+    "    a = find_parent_pc(parent, a)\n",
+    "    b = find_parent_pc(parent, b)\n",
+    "    if a < b:\n",
+    "        parent[b] = a\n",
+    "    else:\n",
+    "        parent[a] = b  "
+   ]
   }
  ],
  "metadata": {
