dbn_disjoint_set.ipynb

--- a/dbn_disjoint_set.ipynb
+++ b/dbn_disjoint_set.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,9 @@
      "output_type": "stream",
      "text": [
       "부모테이블 : [0, 1, 2, 3, 4, 5, 6]\n",
-      "부모테이블 : [0, 1, 1, 2, 1, 5, 5]\n"
+      "부모테이블 : [0, 1, 1, 2, 1, 5, 5]\n",
+      "각 원소가 속한 집합 : 1 1 1 1 5 5 \n",
+      "부모테이블 : 1 1 2 1 5 5 "
      ]
     }
    ],
@@ -74,7 +76,16 @@
     "    a, b = map(int, input.readline().rstrip().split())\n",
     "    union_parent(parent, a, b)\n",
     "    \n",
-    "print(f\"부모테이블 : {parent}\")"
+    "print(f\"부모테이블 : {parent}\")\n",
+    "\n",
+    "print(f\"각 원소가 속한 집합 : \", end='')\n",
+    "for i in range(1, v+1):\n",
+    "    print(find_parent(parent, i), end=' ')\n",
+    "print()\n",
+    "\n",
+    "print(f\"부모테이블 : \", end='')\n",
+    "for i in range(1, v+1):\n",
+    "    print(parent[i], end=\" \")"
    ]
   },
   {
