--- a/dbn_disjoint_set.ipynb
+++ b/dbn_disjoint_set.ipynb
@@ -121,6 +121,26 @@
     "    else:\n",
     "        parent[a] = b  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v : 6,   e : 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = open(\"data/dbn_disjoint_set.txt\", \"r\")\n",
+    "\n",
+    "v, e = map(int, input.readline().rstrip().split())\n",
+    "print(f\"v : {v},   e : {e}\")"
+   ]
   }
  ],
  "metadata": {
