--- a/dbn_disjoint_set.ipynb
+++ b/dbn_disjoint_set.ipynb
@@ -141,6 +141,47 @@
     "v, e = map(int, input.readline().rstrip().split())\n",
     "print(f\"v : {v},   e : {e}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "부모테이블 : [0, 1, 2, 3, 4, 5, 6]\n",
+      "부모테이블 : [0, 1, 1, 2, 1, 5, 5]\n",
+      "각 원소가 속한 집합 : 1 1 1 1 5 5 \n",
+      "부모테이블 : 1 1 1 1 5 5 "
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"부모테이블상에서 부모를 자기자신으로 초기화한다.\"\"\"\n",
+    "parent = [0] * (v + 1)\n",
+    "\n",
+    "for i in range(1, v+1):\n",
+    "    parent[i] = i\n",
+    "    \n",
+    "print(f\"부모테이블 : {parent}\")\n",
+    "    \n",
+    "for i in range(e):\n",
+    "    a, b = map(int, input.readline().rstrip().split())\n",
+    "    union_parent(parent, a, b)\n",
+    "    \n",
+    "print(f\"부모테이블 : {parent}\")\n",
+    "\n",
+    "print(f\"각 원소가 속한 집합 : \", end='')\n",
+    "for i in range(1, v+1):\n",
+    "    print(find_parent_pc(parent, i), end=' ')\n",
+    "print()\n",
+    "\n",
+    "print(f\"부모테이블 : \", end='')\n",
+    "for i in range(1, v+1):\n",
+    "    print(parent[i], end=\" \")"
+   ]
   }
  ],
  "metadata": {
